# upwork-tui

./: .gitignore  Cargo.toml  job.xml
src/: core_opt.rs  lib.rs
src/core_opt/: get_bytes.rs  parse_xml.rs
src/core_opt/parse_xml/: mapped_detail.rs
