[package]
name = "upwork-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
bytes = "1.6.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
human-panic = "2.0.0"
ratatui = { version = "0.26.2", features = ["serde", "macros"] }
reqwest = "0.12.4"
rss = "2.0.7"
scraper = "0.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }

